# ForgeHarbor

./: .gitignore  README.md  tree2.txt
apps/auth-rs/: Dockerfile  cargo.toml
apps/auth-rs/src/: main.rs
apps/history-ts/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/history-ts/src/: index.ts
apps/malware-rs/: Cargo.toml  Dockerfile
apps/malware-rs/src/: main.rs
apps/notify-py/: Dockerfile  main.py  requirements.txt
apps/phishing-rs/: Cargo.toml  Dockerfile
apps/phishing-rs/src/: main.rs
apps/report-go/: Dockerfile  go.mod  go.sum  main.go
apps/report-go/routes/: reports.go
apps/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.jsx  index.css
apps/web/src/components/: FloatingElements.jsx  Footer.jsx  PhishingDetector.jsx  ProtectedRoute.jsx  Result.jsx  URLSection.jsx
apps/web/src/components/Auth/: LoginForm.jsx
apps/web/src/components/History/: ScanHistory.jsx
apps/web/src/components/Layout/: Footer.jsx  Header.jsx
apps/web/src/components/Profile/: ServiceHealth.jsx  UserProfile.jsx
apps/web/src/components/Scan/: PhishingDetector.jsx  Result.jsx  UploadSection.jsx
apps/web/src/contexts/: AuthContext.jsx
apps/web/src/firebase/: firebaseConfig.js
apps/web/src/pages/: DashboardPage.jsx  HistoryPage.jsx  LandingPage.jsx  LoginPage.jsx  ProfilePage.jsx  SignupPage.jsx
apps/web/src/services/: AuthContext.jsx  api.js
deploy/compose/: docker-compose.dev.yml  kong.yml  nginx.logs.conf
pkg/contracts/: scan.completed.json
